--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
+<h1>Hello there!</h1>
 <section>
-    <h1>Sign in:</h1>
-    <form action="https://freecatphotoapp.com/submit-cat-photo">
-        <input type="text" name="login" placeholder="Enter your login" required>
-        <p></p>
-        <input type="password" name="password" placeholder="Enter your password" required>
-        <button>Submit</button>
-    </form>
+    <h2>Here are the links to the web-sites i've created:</h2>
+    <a href="login.html" target="_blank"></a>
 </section>
