--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <h1>Hello there!</h1>
 <section>
     <h2>Here are the links to the web-sites i've created:</h2>
-    <a href="login.html" target="_blank"></a>
+    <ul>
+        <li><a href="login.html" target="_blank">Steam</a></li>
+        <li>More yet to come...</li>
+    </ul>
 </section>
