--- a/login.html
+++ b/login.html
@@ -5,6 +5,11 @@
         <input type="text" name="login" placeholder="Enter your login" required>
         <p></p>
         <input type="password" name="password" placeholder="Enter your password" required>
-        <button>Submit</button>
+        <p>Did u give valid info?</p>
+        <input type="radio" name="agreement"> Yes
+        <input type="radio" name="agreement"> Absolutely
+        <input type="radio" name="agreement"> Of course
+        <p></p>
+        <button type="submit">Submit</button>
     </form>
 </section>
