--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
-<h1>Hello there!</h1>
-<section>
-    <h2>Here are the links to the web-sites i've created:</h2>
-    <ul>
-        <li><a href="login.html" target="_blank">Steam</a></li>
-        <li>More yet to come...</li>
-    </ul>
-</section>
+<html>
+    <body>
+        <main>
+          <h1>Hello there!</h1>
+          <section>
+            <h2>Here are the links to the web-sites i've created:</h2>
+            <ul>
+                <li><a href="login.html" target="_blank">Steam</a></li>
+                <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
+                <li>More yet to come...</li>
+            </ul>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HX6NAxBgfKM?si=5jM7_m1loXyWFkPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </section>  
+        </main>
+        <footer>
+            © 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.
+        </footer>
+    </body>
+</html>
+
