--- a/login.html
+++ b/login.html
@@ -1,15 +1,27 @@
-<h1>Login to your steam account</h1>
-<section>
-    <h2>Sign in:</h2>
-    <form action="https://freecatphotoapp.com/submit-cat-photo">
-        <input type="text" name="login" placeholder="Enter your login" required>
-        <p></p>
-        <input type="password" name="password" placeholder="Enter your password" required>
-        <p>Did u give valid info?</p>
-        <input type="radio" name="agreement"> Yes
-        <input type="radio" name="agreement"> Absolutely
-        <input type="radio" name="agreement"> Of course
-        <p></p>
-        <button type="submit">Submit</button>
-    </form>
-</section>
+<html>
+    <body>
+        <main>
+            <h1>Login to your steam account</h1>
+            <section>
+                <h2>Sign in:</h2>
+                <form action="https://freecatphotoapp.com/submit-cat-photo">
+                    <input type="text" name="login" placeholder="Enter your login" required>
+                    <p></p>
+                    <input type="password" name="password" placeholder="Enter your password" required>
+                    <p></p>
+                    <fieldset>
+                        <legend>Did u give valid info?</legend>
+                        <input type="radio" name="agreement"> Yes
+                        <input type="radio" name="agreement"> Absolutely
+                        <input type="radio" name="agreement"> Of course
+                    </fieldset>
+                    <p></p>
+                    <button type="submit">Submit</button>
+                </form>
+            </section>
+        </main>
+        <footer>
+            © 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.
+        </footer>
+    </body>
+</html>
