improved GUI + new page
i used css in my code for the first time and added some new enhances

--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
-<html>
-    <body>
-        <main>
-          <h1>Hello there!</h1>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Road to Millions</title>
+  </head>
+  <body>
+    <div>
+      <main>
+        <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
+        <h1>Hello there!</h1>
+        <div class="box">
           <section>
             <h2>Here are the links to the web-sites i've created:</h2>
             <ul>
-                <li><a href="login.html" target="_blank">Steam</a></li>
-                <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
-                <li>More yet to come...</li>
+              <li><a href="login.html" target="_blank">Steam</a></li>
+              <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
+              <li>More yet to come...</li>
             </ul>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/HX6NAxBgfKM?si=5jM7_m1loXyWFkPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </section>  
-        </main>
+          </section>
+        </div>  
+      </main>
+      <div class="box">
         <footer>
-            © 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.
+          <p>© 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.</p>
+          <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
         </footer>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
 
