--- a/login.html
+++ b/login.html
@@ -1,27 +1,49 @@
+<!DOCTYPE html>
+
 <html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="stylesheet.css">
+        <title>Login to your steam</title>
+    </head>
     <body>
-        <main>
-            <h1>Login to your steam account</h1>
-            <section>
-                <h2>Sign in:</h2>
-                <form action="https://freecatphotoapp.com/submit-cat-photo">
-                    <input type="text" name="login" placeholder="Enter your login" required>
-                    <p></p>
-                    <input type="password" name="password" placeholder="Enter your password" required>
-                    <p></p>
-                    <fieldset>
-                        <legend>Did u give valid info?</legend>
-                        <input type="radio" name="agreement"> Yes
-                        <input type="radio" name="agreement"> Absolutely
-                        <input type="radio" name="agreement"> Of course
-                    </fieldset>
-                    <p></p>
-                    <button type="submit">Submit</button>
-                </form>
-            </section>
-        </main>
-        <footer>
-            © 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.
-        </footer>
+        <div>
+            <main>
+                <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
+                <h1>Login to your steam account</h1>
+                <div class="box">
+                    <section>
+                        <h2>Sign in:</h2>
+                        <form action="https://freecatphotoapp.com/submit-cat-photo">
+                            <input type="text" name="login" placeholder="Enter your login" required>
+                            <p></p>
+                            <input type="password" name="password" placeholder="Enter your password" required>
+                            <p></p>
+                            <fieldset>
+                                <legend>Did u give valid info?</legend>
+                                <input type="radio" name="agreement"> Yes
+                                <input type="radio" name="agreement"> Absolutely
+                                <input type="radio" name="agreement"> Of course
+                            </fieldset>
+                            <fieldset>
+                                <legend>Do u agree to <a href="terms.html" target="_blank">the terms and policy</a>?</legend>
+                                <input type="checkbox" name="checkboxes" required> Yes, I do
+                                <input type="checkbox" name="checkboxes" disabled>No, I do not
+                            </fieldset>
+                            <p></p>
+                            <button type="submit">Submit</button>
+                        </form>
+                    </section>
+                </div>
+            </main>
+            <div class="box">
+                <footer>
+                    <p>© 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.</p>
+                    <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
+                </footer>
+            </div>
+        </div>
     </body>
 </html>
+
