--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
               <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
               <li>More yet to come...</li>
             </ul>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HX6NAxBgfKM?si=5jM7_m1loXyWFkPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <audio src="https://sefon.pro/api/mp3_download/direct/1253810/3vUCANghXy4eLZWNqM1rmsIDAzEWMXKcGz1jLgk7L589qcegVJvhC_FcnPX9jp9-DklF43t9LZLSshjjtv9XecSw5KHGT4Y-W6FJ_7uhzfnJluxtRUJYDLya-L16hkO9xE2giTDP5UVlqI8W197LLf2WQbi0jX61nk7WoPrl9w/" autoplay loop controls></audio>
+            <figure>
+              <img src="edit.gif" alt="edit" id="edit">
+              <figcaption><em>literally me</em></figcaption>
+            </figure>
           </section>
         </div>  
       </main>
