design + better ui

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Road to Millions</title>
   </head>
   <body>
-    <div>
+    <div class="main_box">
       <main>
         <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
         <h1>Hello there!</h1>
@@ -21,19 +21,19 @@
               <li>More yet to come...</li>
             </ul>
             <audio src="https://sefon.pro/api/mp3_download/direct/1253810/3vUCANghXy4eLZWNqM1rmsIDAzEWMXKcGz1jLgk7L589qcegVJvhC_FcnPX9jp9-DklF43t9LZLSshjjtv9XecSw5KHGT4Y-W6FJ_7uhzfnJluxtRUJYDLya-L16hkO9xE2giTDP5UVlqI8W197LLf2WQbi0jX61nk7WoPrl9w/" autoplay loop controls></audio>
-            <figure>
-              <img src="edit.gif" alt="edit" id="edit">
+            <!-- <figure>
+              <img src="files/edit.gif" alt="edit" id="edit">
               <figcaption><em>literally me</em></figcaption>
-            </figure>
+            </figure> -->
           </section>
         </div>  
       </main>
-      <div class="box">
-        <footer>
+      <footer>
+        <fieldset>
           <p>© 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.</p>
           <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
-        </footer>
-      </div>
+        </fieldset>
+      </footer>
     </div>
   </body>
 </html>
