--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
         <title>Login to your steam</title>
     </head>
     <body>
-        <div>
+        <div class="main_box">
             <main>
                 <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
                 <h1>Login to your steam account</h1>
@@ -37,12 +37,12 @@
                     </section>
                 </div>
             </main>
-            <div class="box">
-                <footer>
+            <footer>
+                <fieldset>
                     <p>© 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.</p>
                     <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
-                </footer>
-            </div>
+                </fieldset>
+            </footer>
         </div>
     </body>
 </html>
