mp4 instead of gif

--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,7 @@
         <title>Terms and Policy</title>
     </head>
     <body>
+        <video src="files/edit.mp4" autoplay muted loop></video>
         <div class="main_box">
             <main>
                 <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
