--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <ul>
               <li><a href="login.html" target="_blank">Steam</a></li>
               <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
+              <li><a href="cafemenu.html">Cafe Menu</a></li>
               <li>More yet to come...</li>
             </ul>
             <audio src="https://sefon.pro/api/mp3_download/direct/1253810/3vUCANghXy4eLZWNqM1rmsIDAzEWMXKcGz1jLgk7L589qcegVJvhC_FcnPX9jp9-DklF43t9LZLSshjjtv9XecSw5KHGT4Y-W6FJ_7uhzfnJluxtRUJYDLya-L16hkO9xE2giTDP5UVlqI8W197LLf2WQbi0jX61nk7WoPrl9w/" autoplay loop controls></audio>
