--- a/login.html
+++ b/login.html
@@ -21,13 +21,13 @@
                             <p></p>
                             <input type="password" name="password" placeholder="Enter your password" required>
                             <p></p>
-                            <fieldset>
+                            <fieldset class="survey">
                                 <legend>Did u give valid info?</legend>
                                 <input type="radio" name="agreement"> Yes
                                 <input type="radio" name="agreement"> Absolutely
                                 <input type="radio" name="agreement"> Of course
                             </fieldset>
-                            <fieldset>
+                            <fieldset class="survey">
                                 <legend>Do u agree to <a href="terms.html" target="_blank">the terms and policy</a>?</legend>
                                 <input type="checkbox" name="checkboxes" required> Yes, I do
                                 <input type="checkbox" name="checkboxes" disabled>No, I do not
