new footer panel, music player and page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <video src="files/edit.mp4" autoplay muted loop></video>
     <div class="main_box">
       <main>
-        <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
+        <a href="index.html"><img src="files/mm.png" alt="Main Page" class="mp"></a>
         <h1>Hello there!</h1>
         <div class="box">
           <section>
@@ -19,16 +19,16 @@
             <ul>
               <li><a href="login.html" target="_blank">Steam</a></li>
               <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
-              <li><a href="cafemenu.html">Cafe Menu</a></li>
+              <li><a href="cafemenu.html" target="_blank">Cafe Menu</a></li>
               <li>More yet to come...</li>
             </ul>
-            <audio src="https://sefon.pro/api/mp3_download/direct/1253810/3vUCANghXy4eLZWNqM1rmsIDAzEWMXKcGz1jLgk7L589qcegVJvhC_FcnPX9jp9-DklF43t9LZLSshjjtv9XecSw5KHGT4Y-W6FJ_7uhzfnJluxtRUJYDLya-L16hkO9xE2giTDP5UVlqI8W197LLf2WQbi0jX61nk7WoPrl9w/" autoplay loop controls></audio>
+            <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1849090314&color=%23ff5500&auto_play=true&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
           </section>
         </div>  
       </main>
       <footer>
         <fieldset>
-          <p>© 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.</p>
+          <p>© 2024 <a href="markers.html">zxc god</a> Tashkent. All rights are reserved.</p>
           <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
         </fieldset>
       </footer>
