--- a/CatPhotoApp.html
+++ b/CatPhotoApp.html
@@ -11,12 +11,11 @@
     <video src="files/edit.mp4" autoplay muted loop></video>
     <div class="main_box">
       <main>
-        <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
+        <a href="index.html"><img src="files/mm.png" alt="Main Page" class="mp"></a>
         <h1>CatPhotoApp</h1>
         <div class="box">
           <section>
             <h2>Cat Photos</h2>
-            <!-- TODO: Add link to cat photos -->
             <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
             <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
           </section>
@@ -66,7 +65,7 @@
       </main>
       <footer>
         <fieldset>
-          <p>© 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.</p>
+          <p>© 2024 <a href="markers.html">zxc god</a> Tashkent. All rights are reserved.</p>
           <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
         </fieldset>
       </footer>
