--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
         <video src="files/edit.mp4" autoplay muted loop></video>
         <div class="main_box">
             <main>
-                <a href="index.html"><img src="https://t2.genius.com/unsafe/425x425/https%3A%2F%2Fimages.genius.com%2F3280e6fcedff40a96e30e0c645240c0b.1000x1000x1.png" alt="Main Page" class="mp"></a>
+                <a href="index.html"><img src="files/mm.png" alt="Main Page" class="mp"></a>
                 <h1>Login to your steam account</h1>
                 <div class="box">
                     <section>
@@ -27,6 +27,7 @@
                                 <input type="radio" name="agreement"> Absolutely
                                 <input type="radio" name="agreement"> Of course
                             </fieldset>
+                            <p></p>
                             <fieldset class="survey">
                                 <legend>Do u agree to <a href="terms.html" target="_blank">the terms and policy</a>?</legend>
                                 <input type="checkbox" name="checkboxes" required> Yes, I do
@@ -40,7 +41,7 @@
             </main>
             <footer>
                 <fieldset>
-                    <p>© 2024 <a href="index.html">zxc god</a> Tashkent. All rights are reserved.</p>
+                    <p>© 2024 <a href="markers.html">zxc god</a> Tashkent. All rights are reserved.</p>
                     <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
                 </fieldset>
             </footer>
