--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <section>
             <h2>Here are the links to the web-sites i've created:</h2>
             <ul>
-              <li><a href="login.html" target="_blank">Steam</a></li>
+              <li><a href="login.html" target="_blank">Sign in</a></li>
               <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
               <li><a href="cafemenu.html" target="_blank">Cafe Menu</a></li>
               <li>More yet to come...</li>
