--- a/login.html
+++ b/login.html
@@ -12,14 +12,18 @@
         <div class="main_box">
             <main>
                 <a href="index.html"><img src="files/mm.png" alt="Main Page" class="mp"></a>
-                <h1>Login to your steam account</h1>
+                <h1>Create a new account</h1>
                 <div class="box">
                     <section>
-                        <h2>Sign in:</h2>
+                        <h2>Sign up:</h2>
                         <form action="https://freecatphotoapp.com/submit-cat-photo" method="post">
                             <label class="lbl">Enter your email: <input type="email" placeholder="name@mail.domain" minlength="8" required></label>
                             <label class="lbl">Enter your login: <input type="text" name="login" placeholder="your_login_example" minlength="8" required></label>                            
                             <label class="lbl">Enter your password: <input type="password" name="password" placeholder="12+ letters or digits" pattern="[a-z0-9]{12,}" required></label>
+                            <label class="lbl">Enter you age: <input type="number" min="18" max="99" placeholder="18+" required></label>
+                            <hr>
+                            <label class="lbl">Upload your profile picture: <input type="file" required></label>
+                            <hr>
                             <fieldset class="survey">
                                 <legend>Did u give valid info?</legend>
                                 <label><input type="radio" name="agreement"> Yes</label>
@@ -33,7 +37,8 @@
                                 <label><input type="checkbox" name="checkboxes" disabled>No, I do not</label>
                             </fieldset>
                             <p></p>
-                            <button type="submit">Submit</button>
+                            <hr>
+                            <input type="submit" value="Submit" id="inp">
                         </form>
                     </section>
                 </div>
