login styled, new page

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
         <h1>Hello there!</h1>
         <div class="box">
           <section>
-            <h2>Here are the links to the web-sites i've created:</h2>
+            <h2>Here are the links to the web-sites I've created:</h2>
             <ul>
               <li><a href="login.html" target="_blank">Sign up</a></li>
+              <li>More yet to come...</li>
+            </ul>
+            <h2>Created within freecodecamp learning project</h2>
+            <ul>
               <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
               <li><a href="cafemenu.html" target="_blank">Cafe Menu</a></li>
-              <li>More yet to come...</li>
+              <li><a href="registration_form.html" target="_blank">Registration form</a></li>
             </ul>
             <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1849090314&color=%23ff5500&auto_play=true&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
           </section>
