--- a/login.html
+++ b/login.html
@@ -17,18 +17,28 @@
                     <section>
                         <h2>Sign up:</h2>
                         <form action="https://freecatphotoapp.com/submit-cat-photo" method="post">
-                            <label class="lbl">Enter your email: <input type="email" placeholder="name@mail.domain" minlength="8" required></label>
-                            <label class="lbl">Enter your login: <input type="text" name="login" placeholder="your_login_example" minlength="8" required></label>                            
-                            <label class="lbl">Enter your password: <input type="password" name="password" placeholder="12+ letters or digits" pattern="[a-z0-9]{12,}" required></label>
-                            <label class="lbl">Enter you age: <input type="number" min="18" max="99" placeholder="18+" required></label>
+                            <label class="lbl">Enter your email: <input type="email" placeholder="name@mail.domain" minlength="8" class="input-color" required></label>
+                            <label class="lbl">Enter your login: <input type="text" name="login" placeholder="your_login_example" minlength="8" class="input-color" required></label>                            
+                            <label class="lbl">Enter your password: <input type="password" name="password" placeholder="12+ letters or digits" pattern="[a-z0-9]{12,}" class="input-color" required></label>
+                            <label class="lbl">Enter you age: <input type="number" min="18" max="99" placeholder="18+" class="input-color" required></label>
                             <hr>
                             <label class="lbl">Upload your profile picture: <input type="file" required></label>
+                            <hr>
+                            <label class="lbl">
+                                Your opinion about the web-site
+                                <select class="input-color">
+                                    <option value="0">Excellent</option>
+                                    <option value="1">Good</option>
+                                    <option value="2">Not bad</option>
+                                    <option value="3">Could be better</option>
+                                </select>
+                            </label>
                             <hr>
                             <fieldset class="survey">
                                 <legend>Did u give valid info?</legend>
                                 <label><input type="radio" name="agreement"> Yes</label>
                                 <label><input type="radio" name="agreement"> Absolutely</label>
-                                <label><input type="radio" name="agreement" required> Of course</label>
+                                <label><input type="radio" name="agreement" required> No (isn't recommended) </label>
                             </fieldset>
                             <p></p>
                             <fieldset class="survey">
@@ -38,6 +48,9 @@
                             </fieldset>
                             <p></p>
                             <hr>
+                            <label> Why we should consider your registration: 
+                                <textarea rows="3" cols="35"  id="last-label" minlength="200" placeholder="Умею таймить реквием под еул..." required></textarea>
+                            </label>
                             <input type="submit" value="Submit" id="inp">
                         </form>
                     </section>
