--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Road to Millions</title>
+    <title>Draft</title>
   </head>
   <body>
     <video src="files/edit.mp4" autoplay muted loop></video>
