--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="stylesheet.css">
-        <title>Login to your steam</title>
+        <title>Sign up</title>
     </head>
     <body>
         <video src="files/edit.mp4" autoplay muted loop></video>
