login font update

--- a/login.html
+++ b/login.html
@@ -38,11 +38,11 @@
                                 <legend>Did u give valid info?</legend>
                                 <label><input type="radio" name="agreement"> Yes</label>
                                 <label><input type="radio" name="agreement"> Absolutely</label>
-                                <label><input type="radio" name="agreement" required> No (isn't recommended) </label>
+                                <label><input type="radio" name="agreement" required> No (isn't recommended to choose no) </label>
                             </fieldset>
                             <p></p>
                             <fieldset class="survey">
-                                <legend>Do u agree to <a href="terms.html" target="_blank">the terms and policy</a>?</legend>
+                                <legend>Do u agree to the <a href="terms.html" target="_blank">terms and policy</a>?</legend>
                                 <label><input type="checkbox" name="checkboxes" required> Yes, I do</label>
                                 <label><input type="checkbox" name="checkboxes" disabled>No, I do not</label>
                             </fieldset>
