update of terms

--- a/terms.html
+++ b/terms.html
@@ -12,18 +12,21 @@
         <div class="main_box">
             <main>
                 <a href="index.html"><img src="files/mm.png" alt="Main Page" class="mp"></a>
-                <h1>The terms and Policy of usage zxc god's products</h1>
+                <h1>The Terms and Policy of usage zxc god's products</h1>
                 <div class="box">
                     <section>
-                        <p>The web-site exists to enrich the author and make him millions in the prospective future. The prototype serves as a portfolio</p>
-                        <h2>Obligations, rights and terms</h2>
+                        <p>Policy of the web-site might change in the prospective future</p>
+                        <hr>
+                        <h2>Obligations, rights and terms:</h2>
                         <ol>
                             <li>The user is <strong>obliged</strong> to keep their mouth shut</li>
                             <li>The user <strong>mustn't</strong> leave a negative review</li>
                             <li>The user's data may and will be used against the very user and sold at each black market possible</li>
                             <li>zxc god isn't responsible for anything illegal that might presence here</li>
-                            <li>zxc god is the lord and divine</li>
+                            <li>не пикать пуджа в 5</li>
                         </ol>
+                        <hr>
+                        <p>That's it for now</p>
                     </section>
                 </div>
             </main>
