better design + new content

--- a/CatPhotoApp.html
+++ b/CatPhotoApp.html
@@ -44,7 +44,7 @@
           </section>
           <section>
             <h2>Cat Form</h2>
-            <form action="https://freecatphotoapp.com/submit-cat-photo">
+            <form action="gallery.html">
               <fieldset class="survey">
                 <legend>Is your cat an indoor or outdoor cat?</legend>
                 <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor"> Indoor</label>
@@ -65,7 +65,7 @@
       </main>
       <footer>
         <fieldset>
-          <p>© 2024 <a href="markers.html">zxc god</a> Tashkent. All rights are reserved.</p>
+          <p>© 2024 <a href="gallery.html">zxc god</a> Tashkent. All rights are reserved.</p>
           <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
         </fieldset>
       </footer>
