--- a/login.html
+++ b/login.html
@@ -10,13 +10,13 @@
     <body>
         <video src="files/edit.mp4" autoplay muted loop></video>
         <div class="main_box">
-            <main>
+            <main>  
                 <a href="index.html"><img src="files/mm.png" alt="Main Page" class="mp"></a>
                 <h1>Create a new account</h1>
                 <div class="box">
                     <section>
                         <h2>Sign up:</h2>
-                        <form action="https://freecatphotoapp.com/submit-cat-photo" method="post">
+                        <form action="gallery.html" method="post">
                             <label class="lbl">Enter your email: <input type="email" placeholder="name@mail.domain" minlength="8" class="input-color" required></label>
                             <label class="lbl">Enter your login: <input type="text" name="login" placeholder="your_login_example" minlength="8" class="input-color" required></label>                            
                             <label class="lbl">Enter your password: <input type="password" name="password" placeholder="12+ letters or digits" pattern="[a-z0-9]{12,}" class="input-color" required></label>
@@ -48,8 +48,8 @@
                             </fieldset>
                             <p></p>
                             <hr>
-                            <label> Why we should consider your registration: 
-                                <textarea rows="3" cols="35"  id="last-label" minlength="200" placeholder="Умею таймить реквием под еул..." required></textarea>
+                            <label> <p class="center">Why we should consider your registration: </p>
+                                <textarea rows="5"  id="last-label" minlength="200" placeholder="Умею таймить реквием под еул..." required></textarea>
                             </label>
                             <input type="submit" value="Submit" id="inp">
                         </form>
@@ -58,7 +58,7 @@
             </main>
             <footer>
                 <fieldset>
-                    <p>© 2024 <a href="markers.html">zxc god</a> Tashkent. All rights are reserved.</p>
+                    <p>© 2024 <a href="gallery.html">zxc god</a> Tashkent. All rights are reserved.</p>
                     <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
                 </fieldset>
             </footer>
