--- a/terms.html
+++ b/terms.html
@@ -12,7 +12,7 @@
         <div class="main_box">
             <main>
                 <a href="index.html"><img src="files/mm.png" alt="Main Page" class="mp"></a>
-                <h1>The Terms and Policy of usage zxc god's products</h1>
+                <h1>The Terms and Policy</h1>
                 <div class="box">
                     <section>
                         <p>Policy of the web-site might change in the prospective future</p>
@@ -32,7 +32,7 @@
             </main>
             <footer>
                 <fieldset>
-                    <p>© 2024 <a href="markers.html">zxc god</a> Tashkent. All rights are reserved.</p>
+                    <p>© 2024 <a href="gallery.html">zxc god</a> Tashkent. All rights are reserved.</p>
                     <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
                 </fieldset>
             </footer>
