--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </main>
       <footer>
         <fieldset>
-          <p>© 2024 <a href="markers.html">zxc god</a> Tashkent. All rights are reserved.</p>
+          <p>© 2024 <a href="gallery.html">zxc god</a> Tashkent. All rights are reserved.</p>
           <p><a href="terms.html" target="_blank">Terms and Policy</a></p>
         </fieldset>
       </footer>
