--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                 <div class="box">
                     <section>
                         <h2>Sign up:</h2>
-                        <form action="gallery.html" method="post">
+                        <form action="gallery.html">
                             <label class="lbl">Enter your email: <input type="email" placeholder="name@mail.domain" minlength="8" class="input-color" required></label>
                             <label class="lbl">Enter your login: <input type="text" name="login" placeholder="your_login_example" minlength="8" class="input-color" required></label>                            
                             <label class="lbl">Enter your password: <input type="password" name="password" placeholder="12+ letters or digits" pattern="[a-z0-9]{12,}" class="input-color" required></label>
