plenty of changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
             <h2>Created within freecodecamp learning project</h2>
             <ul>
-              <li><a href="CatPhotoApp.html" target="_blank">CatPhotoApp</a></li>
+              <li><a href="Cat Gallery.html" target="_blank">CatPhotoGallery</a></li>
               <li><a href="cafemenu.html" target="_blank">Cafe Menu</a></li>
               <li><a href="registration_form.html" target="_blank">Registration form</a></li>
             </ul>
