--- a/CatPhotoApp.html
+++ b/CatPhotoApp.html
@@ -16,8 +16,8 @@
         <div class="box">
           <section>
             <h2>Cat Photos</h2>
-            <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-            <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+            <p>See more <a href="Cat Gallery.html">cat photos</a> in our gallery.</p>
+            <a href="Cat Gallery.html"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
           </section>
           <section>
             <h2>Cat Lists</h2>
