--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <li><a href="Cat Gallery.html" target="_blank">CatPhotoGallery</a></li>
               <li><a href="cafemenu.html" target="_blank">Cafe Menu</a></li>
               <li><a href="registration_form.html" target="_blank">Registration form</a></li>
+              <li><a href="nutrition-facts.html" target="_blank">Nutrition Facts</a></li>
             </ul>
             <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1849090314&color=%23ff5500&auto_play=true&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
           </section>
